kubernetes/apps/kube-system/webmin/k8s-0/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-0
  namespace: kube-system
spec:
  ports:
  - name: webmin
    port: 10000
    protocol: TCP
    targetPort: 10000
  clusterIP: None
  type: ClusterIP
