kubernetes/apps/kube-system/webmin/k8s-0/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-0
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://auth.${SECRET_DOMAIN}/oauth2/auth?allowed_groups=admin
    nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
    hajimari.io/enable: "true"
    hajimari.io/icon: "mdi:computer-classic"
    hajimari.io/group: "Nodes"
spec:
  rules:
    - host: &host "k8s-0.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8s-0
              port:
                number: 10000
  tls:
    - hosts:
        - *host
      secretName: "k8s-0-tls"
